--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "phpunit/phpunit": "^7.0",
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "^3.7",
-        "codeclimate/php-test-reporter": "dev-master"
+        "codeclimate/php-test-reporter": "dev-master",
+        "orchestra/testbench-dusk": "~3.7"
     },
     "autoload": {
         "psr-4": {
